2003-01-28  Bernhard Held <bernhard@bernhardheld.de>

	* src/ds390/gen.c: fix deps by replacing <common.h> with "common.h"
	* src/SDCC.lex: rename P_OVERLAY to P_OVERLAY_ for cross-gcc 3.2 MINGW32 

2003-01-26    <johan@balder>

	* src/SDCClrange.c:  fixed Bernhard's "char * code ptr = &c"
	* src/SDCCsymt.h: fixed bug #673374
	* src/SDCCglue.c: fixed bug #661910
	* src/SDCCast.c: fixed bug #458099 and 673374

2003-01-26  Bernhard Held <bernhard@bernhardheld.de>

	* as/mcs51/strcmpi.c: added, provides Aurelien Jarno's as_strcmpi(); strcmpi() is not ANSI
	* as/mcs51/strcmpi.h: added
	* as/mcs51/asm.h: remove ugly "#define strcmpi strcmp"
	* as/mcs51/aslink.h: remove ugly "#define strcmpi strcmp"
	* as/mcs51/asmain.c: strcmpi -> as_strcmpi
	* as/mcs51/assym.c: strcmpi -> as_strcmpi
	* as/mcs51/lkmem.c: strcmpi -> as_strcmpi
	* as/mcs51/lknoice.c: strcmpi -> as_strcmpi
	* as/mcs51/lksym.c: strcmpi -> as_strcmpi
	* as/mcs51/Makefile.aslink: new module strcmpi
	* as/mcs51/Makefile.asx8051: new module strcmpi
	* as/mcs51/Makefil.bcc: new module strcmpi
	* as/mcs51/Makefile.in: new module strcmpi
	* sim/ucsim/s51.src/uc390.cc (get_mem_size): make RAM big enough for tinibios

2003-01-26    <johan@balder>

	* src/SDCCglue.c: reverted back to 1.124
	* src/SDCCast.c: reverted back to 1.156
	* src/mcs51/gen.c (aopGet): applied Frieder's efficiency patch

2003-01-25    <johan@balder>

	* src/SDCCglue.c: A better fix for bug #661910
	* src/SDCCast.c: A better fix for bug #661910
	* src/SDCCglue.c (emitRegularMap): That was a little too efficient

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/Makefile.in: remove spawn.o
	* src/SDCCmain.c: remove spawn.h
	* src/SDCCmain.c (printVersionInfo): report MINGW32 instead of UNIX
	* src/spawn.c: removed
	* src/spawn.h: removed
	* support/regression/ports/ds390/spec.mk: link with -r

2003-01-24    <johan@CP255758-A>

	* src/ds390/gen.c (aopOp): fixed bug #667458
	* src/SDCCglue.c (emitRegularMap): fixed bug #458099 again